# poc-auto-schematization

./: .claudeignore  .gitignore  CLAUDE.md  FINAL_RUN_SUMMARY.md  README.md  agno_pipeline.py  app.py  copy_datasets.sh  eval_metrics.py  evaluate_pvmap_diff.py  generate_gemini_metrics.py  http_cache.sqlite  imports_audit_tools.txt  imports_audit_util.txt  instructions.txt  load_env.sh  map_schema_to_datasets.sh  pvmap.csv  pyproject.toml  pytest.ini  requirements.txt  rerun_failed.sh  run_all_datasets.sh  run_batch_12.sh  run_batch_20.sh  run_batch_5.sh  run_pipeline.sh  run_pvmap_pipeline.py  run_remaining_datasets.sh  test_gemini_api.py
.streamlit/: config.toml
Schema Example Files/Demographics/: scripts_statvar_llm_config_vertical_dc_topic_Demographics_statvars.mcf
Schema Example Files/Education/: scripts_statvar_llm_config_schema_examples_dc_topic_Education.txt
Schema Example Files/Employment/: scripts_statvar_llm_config_schema_examples_dc_topic_Employment.txt
Schema Example Files/Energy/: scripts_statvar_llm_config_schema_examples_dc_topic_Energy.txt
Schema Example Files/Health/: scripts_statvar_llm_config_schema_examples_dc_topic_Health.txt  scripts_statvar_llm_config_vertical_dc_topic_Health_statvars.mcf
analysis/: Auto_Schematization_Evaluation_Analysis.md  Benchmark_Comparison.md  Gemini_vs_Claude_Comparison.md
analysis/claude_cli_sys_1/: Auto_Schematization_Evaluation_Analysis.md  Benchmark_Comparison.md
analysis/dataset_summaries/: bev_3240_wiki_analysis.md  bis_analysis.md  bis_bis_central_bank_policy_rate_analysis.md  ccd_enrollment_analysis.md  cdc_social_vulnerability_index_analysis.md  census_v2_sahie_analysis.md  commerce_eda_analysis.md  doctoratedegreeemployment_analysis.md  fbi_fbigovcrime_analysis.md  finland_census_analysis.md  india_ndap_analysis.md  india_ndap_india_nss_health_ailments_analysis.md  india_nfhs_analysis.md  inpe_fire_analysis.md  ncses_ncses_demographics_seh_import_analysis.md  nyu_diabetes_texas_analysis.md  oecd_wastewater_treatment_analysis.md  school_algebra1_analysis.md  undata_analysis.md  us_bls_bls_ces_analysis.md  us_bls_bls_ces_state_analysis.md  us_cdc_single_race_analysis.md  us_crash_fars_crashdata_analysis.md  us_education_new_york_education_analysis.md  us_newyork_ny_diabetes_analysis.md  us_urban_school_covid_directional_indicators_analysis.md  us_urban_school_maths_and_science_enrollment_analysis.md  us_urban_school_teachers_analysis.md  who_covid19_analysis.md  world_bank_commodity_market_analysis.md  zurich_bev_3240_wiki_analysis.md  zurich_bev_3903_age10_wiki_analysis.md  zurich_bev_3903_hel_wiki_analysis.md  zurich_bev_3903_sex_wiki_analysis.md  zurich_bev_4031_hel_wiki_analysis.md  zurich_bev_4031_sex_wiki_analysis.md  zurich_bev_4031_wiki_analysis.md  zurich_wir_2552_wiki_analysis.md
analysis/gemini/: all_metrics.json
analysis/raw_data/: all_metrics.json
docs/: APPENDIX.md  INPUT_GUIDE.md  SETUP.md  USAGE.md
schema_example_files/Economy/: scripts_statvar_llm_config_vertical_dc_topic_Economy_statvars.mcf
schema_example_files/Education/: scripts_statvar_llm_config_vertical_dc_topic_Education_statvars.mcf
schema_example_files/Employment/: scripts_statvar_llm_config_vertical_dc_topic_Employment_statvars.mcf
schema_example_files/Energy/: scripts_statvar_llm_config_vertical_dc_topic_Energy_statvars.mcf
schema_example_files/School/: scripts_statvar_llm_config_vertical_School_statvars.mcf
src/: OUTPUT_STRUCTURE.md  run_pipeline.py
src/agents/: README.md  coordinator.py  discovery_agent.py  evaluation_agent.py  pvmap_generation_agent.py  pvmap_generation_agent.py.backup  sampling_agent.py  schema_selection_agent.py
src/compatibility/: __init__.py  tools_compat.py  util_compat.py
src/config/: cli_parser.py
src/data_commons/: __init__.py
src/infrastructure/: __init__.py
src/processing/: __init__.py  utils.py
src/state/: context.py  dataset_info.py  dataset_registry.py
src/tools/: data_sampler_tool.py  evaluation_tools.py  logging_tools.py  schema_tools.py  validation_tool.py
src/utils/: artifact_plugin.py  logging_config.py
test/: test_gemini_client.py
tests/: conftest.py
tests/agents/: test_coordinator.py  test_discovery_agent.py  test_evaluation_agent.py  test_pvmap_generation_agent.py  test_pvmap_helpers.py  (+2 more)
tools/: column_analyzer.py  config_flags.py  data_sampler.py  improved_pvmap_prompt.txt  property_value_mapper.py  schema_selector.py
util/: gemini_client.py
(+167 files in other folders)
